<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_marginBottom="@dimen/margin_normal"
            android:contentDescription="@string/rating_dialog_overview_image_content_description"
            app:layout_constraintBottom_toTopOf="@id/storeRatingTitleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/storeRatingTitleTextView"
            style="@style/RatingTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_dialog_store_title"
            app:layout_constraintBottom_toTopOf="@id/storeRatingMessageTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"/>

        <TextView
            android:id="@+id/storeRatingMessageTextView"
            style="@style/RatingMessageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_dialog_store_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storeRatingTitleTextView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>