<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/buttonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/neutral"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/rating_dialog_button_rate_later"
                android:visibility="gone" />

        <View
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/negative"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/rating_dialog_button_rate_never"
                android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/positive"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/rating_dialog_overview_button_confirm"
                android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
